--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,8 @@
 	
 		<div class="footer-column" id="footer-contact">
 				<h2>Contact Us</h2>
-				<p>Address</p>
-				<p>Email</p>
+				<p>Address: </p>
+				<p>Email: shelbycokydems@gmail.com</p>
 		</div>
 	
 		<div class="footer-column" id="footer-middle">
@@ -13,7 +13,7 @@
 		</div>
 		
 		<div class="footer-column" id="footer-social">
-			<div><a href="#">
+			<div><a href="https://twitter.com/shelbydemky">
 				<span class="fa-stack fa-3x">
 					<i class="fa fa-circle fa-stack-2x twittercircle"></i>
 					<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
