--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -18,8 +18,6 @@ $facebook-blue: #3B5998
 
 /** Breakpoints **/
 
-$large-screen: new-breakpoint(min-width 850px 4)
-
-$mobile: new-breakpoint(min-width 0px max-width 849px 4)
-
-$tablet: new-breakpoint(max-width 1300px 4)
+$mobile: new-breakpoint(max-width 600px 4)
+$tablet: new-breakpoint(max-width 1230px 8)
+$screen: new-breakpoint(min-width 1231px)
