Added email mailto

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 		<div class="footer-column" id="footer-contact">
 				<h2>Contact Us</h2>
 				<p>Address: </p>
-				<p>Email: shelbycokydems@gmail.com</p>
+				<p><a href="mailto:shelbycokydems@gmail.com">shelbycokydems@gmail.com</a></p>
 		</div>
 	
 		<div class="footer-column" id="footer-middle">
