--- a/assets/css/2-modules/signup.sass
+++ b/assets/css/2-modules/signup.sass
@@ -7,16 +7,23 @@
   +media($mobile)
     padding: 0
   
-  #signup-text
-    font-size: 22px
-    float: left
-    color: #fff
-    margin: 0
-    
-    +media($mobile)
-      width: 100%
-      padding-bottom: 15px
-      text-align: center
+  +media($screen)
+    padding: 15px 0
+  
+.signup-container
+  +media($screen)
+    +outer-container(90%)
+  
+#signup-text
+  font-size: 22px
+  float: left
+  color: #fff
+  margin: 0
+
+  +media($tablet)
+    width: 100%
+    padding-bottom: 15px
+    text-align: center
     
 #signup-form
   float: right
@@ -32,14 +39,14 @@
       background-color: $donate-red
       color: #fff
     
-  +media($mobile)
+  +media($tablet)
     float: none
   
 .signup-input
   float: left
   padding-left: 20px
   
-  +media($mobile)
+  +media($tablet)
     width: 100%
     padding: 0 20px 15px
     text-align: center
