--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,6 @@
 <header role="banner">
 	<div class="logo">
+	  <div class="img-container"></div>
 		<a href="/index.html"><img src="/assets/img/shelbylogo.png" class="logoimg"></a>
 		<h1 id="partyname"><a href="/index.html">Shelby County Democratic Party</a></h1>
     <a href="#" id="mobile-menu-button"><i class='fa fa-2x fa-bars'></i></a>
@@ -20,11 +21,12 @@
 			<li class="nav-link more"><a href="#">Get Involved!&nbsp;<i class="fa fa-caret-down"></i></a>
         <ul id="sub-menu">
           <li><a href="/volunteer.html">Volunteer</a></li>
-          <li><a href="http://elect.ky.gov/registertovote/Pages/default.aspx">Register to Vote</a></li>
           <li><a href="/contact.html">Contact Us</a></li>
+          <li><a href="http://elect.ky.gov/registertovote/Pages/default.aspx">Register to Vote</a></li>
+
         </ul>
       </li>
-			<li class="nav-link"><a href="#" id="donate">Donate</a></li>
+<!--			<li class="nav-link"><a href="#" id="donate">Donate</a></li>-->
 		</ul>
 	</nav>
 	<script type="text/javascript" src="/assets/js/navbarToggle.js"></script>
