--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,17 @@
 <footer>
 	<div class="container">
-	
+
 		<div class="footer-column" id="footer-contact">
 				<h2>Contact Us</h2>
-				<p>Address: </p>
+				<p>P.O. Box 1266 <br> Shelbyville, KY 40066</p>
 				<p><a href="mailto:shelbycokydems@gmail.com">shelbycokydems@gmail.com</a></p>
 		</div>
-	
+
 		<div class="footer-column" id="footer-middle">
 			<img src="/assets/img/shelbylogo-circle.png" id="footer-logo"><br>
 			<div id="paidfor">Paid for by the Shelby County Democratic Party</div>
 		</div>
-		
+
 		<div class="footer-column" id="footer-social">
 			<div><a href="https://twitter.com/shelbydemky">
 				<span class="fa-stack fa-3x">
@@ -19,14 +19,14 @@
 					<i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
 				</span></a>
 			</div>
-			<div><a href="#">
+			<div><a href="https://www.facebook.com/ShelbyCoKYDems/">
 				<span class="fa-stack fa-3x">
 					<i class="fa fa-circle fa-stack-2x facebookcircle"></i>
 					<i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
 				</span></a>
 			</div>
 		</div>
-		
+
 	</div>
-		
+
 </footer>
