--- a/assets/css/3-layouts/candidate.sass
+++ b/assets/css/3-layouts/candidate.sass
@@ -1,17 +1,20 @@
 .candidate-container
 	padding: 10px 10px
 
-.candidate-box    
+.candidate-box
+  
+  padding-bottom: 2em
+  
   h2
     color: #0f2446
-  
+
   +media($screen)
     +span-columns(4)
     +omega(3n)
 
     img
       width: 50%
-  
+
   +media($tablet)
     +span-columns(4)
     +omega(2n)
@@ -19,16 +22,22 @@
       width: 50%
     a
       font-size: 15px
-      
+
   +media($mobile)
     +span-columns(4)
     img
       width: 100%
-      
+
+.icons
+	padding: 0
+
+.icons-link
+	display: inline-block
+
 .executive-box
   h2
     color: #0f2446
-  
+
   +media($screen)
     +span-columns(4)
     +omega(3n)
@@ -36,10 +45,10 @@
     img
       width: 50%
       height: auto
-  
+
   +media($mobile)
     +span-columns(4)
-  
+
   +media($tablet)
     +span-columns(4)
     +omega(2n)
@@ -47,30 +56,30 @@
       width: 100%
     a
       font-size: 20px
-  
+
 .meeting
   padding: 10px 10px 20px
   +outer-container
-  
+
   +media($screen)
     +outer-container(90%)
-  
+
   +media($mobile)
     padding: 0 10px
-  
+
 #meeting-info
   +span-columns(5)
   font-size: 20px
-  
+
   +media($mobile)
     +span-columns(4)
-  
+
 #map-container
   +span-columns(7)
-  
+
   +media($mobile)
     +span-columns(4)
     padding-top: 10px
-  
+
 #map
   height: 250px
