--- a/assets/css/2-modules/footer.sass
+++ b/assets/css/2-modules/footer.sass
@@ -1,28 +1,28 @@
-footer	
+footer
   background-color: #0f2446
   overflow: auto
   padding-bottom: 30px
 
 .container
   padding: 30px 0
-  
+
   +media($tablet)
     +outer-container
-  
+
   +media($screen)
     +outer-container(90%)
 
 .footer-column
   +media($screen)
     +span-columns(4)
-  
+
   +media($tablet)
     +span-columns(8)
     text-align: center
-  
+
   +media($mobile)
     +span-columns(4)
-  
+
   h3
     margin: 0
     padding-bottom: 20px
@@ -30,10 +30,10 @@ footer
 #footer-contact
   p
     color: #fff
-    
+
   a
     color: #fff
-    
+
     &:hover
       text-decoration: underline
 
@@ -48,6 +48,9 @@ footer
   border: 2px solid #fff
   padding: 5px
   color: #fff
+
+  +media($tablet)
+    margin: 0 3em
 
 #footer-social
   text-align: center
