--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,27 +4,43 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>{{ page.title }}</title>
+	<meta name="description" content="{{page.title}}">
 	<meta name="viewport" content="width=device-width">
 	<!---
 
-  ____  _          _ _             ____                     
- / ___|| |__   ___| | |__  _   _  |  _ \  ___ _ __ ___  ___ 
+  ____  _          _ _             ____
+ / ___|| |__   ___| | |__  _   _  |  _ \  ___ _ __ ___  ___
  \___ \| '_ \ / _ \ | '_ \| | | | | | | |/ _ \ '_ ` _ \/ __|
   ___) | | | |  __/ | |_) | |_| | | |_| |  __/ | | | | \__ \
  |____/|_| |_|\___|_|_.__/ \__, | |____/ \___|_| |_| |_|___/
-                           |___/                            
+                           |___/
 
 
 -->
+<!-- Twitter Card Data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@shelbydemky">
+	<meta name="twitter:title" content="Shelby County Democratic Party">
+	<meta name="twitter:description" content="{{ page.title }}">
+	<meta name="twitter:creator" content="@shelbydemky">
+	<meta name="twitter:image" content="/assets/img/shelbylogo.png">
+
+<!-- Open Graph Data-->
+	<meta name="og:title" content="Shelby County Democratic Party">
+	<meta name="og:url" content="http://www.shelbycokydems.com">
+	<meta name="og:description" content="{{ page.title }}">
+	<meta name="og:site_name" content="Shelby County Democratic Party">
+	<meta name="og:image" content="/assets/img/shelbylogo.png">
+	
 	<link rel="stylesheet" href="/assets/css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
-  
+
   <!--[if lt IE 9]>
     <script src="/assets/js/html5shiv.min.js"></script>
     <script src="/assets/js/respond.min.js"></script>
   <![endif]-->
-  
+
 	<script type="text/javascript" src="/assets/js/jquery-1.11.3.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
