change to meta data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,9 @@
 	<meta name="og:url" content="http://www.shelbycokydems.com">
 	<meta name="og:description" content="{{ page.title }}">
 	<meta name="og:site_name" content="Shelby County Democratic Party">
+	<meta name="og:type" content="website">
 	<meta name="og:image" content="/assets/img/shelbylogo.png">
-	
+
 	<link rel="stylesheet" href="/assets/css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
