meta tag changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	<meta name="twitter:title" content="Shelby County Democratic Party">
 	<meta name="twitter:description" content="{{ page.title }}">
 	<meta name="twitter:creator" content="@shelbydemky">
-	<meta name="twitter:image" content="/assets/img/shelbylogo.png">
+	<meta name="twitter:image" content="http://www.shelbycokydems.com/assets/img/shelbylogo.png">
 
 <!-- Open Graph Data-->
 	<meta name="og:title" content="Shelby County Democratic Party">
@@ -31,7 +31,7 @@
 	<meta name="og:description" content="{{ page.title }}">
 	<meta name="og:site_name" content="Shelby County Democratic Party">
 	<meta name="og:type" content="website">
-	<meta name="og:image" content="/assets/img/shelbylogo.png">
+	<meta name="og:image" content="http://www.shelbycokydems.com/assets/img/shelbylogo.png">
 
 	<link rel="stylesheet" href="/assets/css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
