Added bxslider function

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,7 @@
 
 	<link rel="stylesheet" href="/assets/css/main.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/assets/css/jquery.bxslider.css">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css" />
 
   <!--[if lt IE 9]>
@@ -44,6 +45,7 @@
 
 	<script type="text/javascript" src="/assets/js/jquery-1.11.3.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
+	<script type="text/javascript" src="/assets/js/jquery.bxslider.min.js"></script>
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
 </head>
 <body>
