changed meta description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,14 +21,14 @@
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@shelbydemky">
 	<meta name="twitter:title" content="Shelby County Democratic Party">
-	<meta name="twitter:description" content="Moving Everyone Forward">
+	<meta name="twitter:description" content="{{ page.title }}">
 	<meta name="twitter:creator" content="@shelbydemky">
 	<meta name="twitter:image" content="http://www.shelbycokydems.com/assets/img/shelbylogo.png">
 
 <!-- Open Graph Data-->
 	<meta name="og:title" content="Shelby County Democratic Party">
 	<meta name="og:url" content="http://www.shelbycokydems.com">
-	<meta name="og:description" content="Moving Everyone Forward">
+	<meta name="og:description" content="{{ page.title }}">
 	<meta name="og:site_name" content="Shelby County Democratic Party">
 	<meta name="og:type" content="website">
 	<meta name="og:image" content="http://www.shelbycokydems.com/assets/img/shelbylogo.png">
