--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,7 +1,7 @@
 	<div class="signup">
 	  <div class="signup-container">
 	    <div id="signup-text">Signup for Updates!</div>
-      <div id="signup-form">
+      <!-- <div id="signup-form">
         <form action="//formspree.io/shelbycokydems@gmail.com" method="POST">
           <input type="hidden" name="_subject" value="New Update Subscriber!" />
           <input type="hidden" name="_next" value="//#" />
@@ -13,9 +13,36 @@
           </div>
           <input type="text" name="_gotcha" style="display:none" />
           <div class="signup-input">
-            <button type="submit">SUBSCRIBE</button>				
+            <button type="submit">SUBSCRIBE</button>
           </div>
         </form>
-      </div>
+      </div> -->
+			<div id="signup-form">
+				<div id="mc_embed_signup">
+					<form action="//shelbycokydems.us13.list-manage.com/subscribe/post?u=d253237f5f7fe430614952a44&amp;id=9205faa7b0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+
+							<div class="mc-field-group signup-input">
+								<input type="text" value="" name="NAME" placeholder="NAME" class="" id="mce-NAME">
+							</div>
+
+							<div class="mc-field-group signup-input">
+								<input type="email" value="" name="EMAIL" placeholder="EMAIL" class="required email" id="mce-EMAIL">
+							</div>
+
+							<div class="clear signup-input">
+								<input type="submit" value="SUBSCRIBE" name="subscribe" id="mc-embedded-subscribe" class="button">
+							</div>
+
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>
+								<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d253237f5f7fe430614952a44_9205faa7b0" tabindex="-1" value=""></div>
+						</div>
+					</form>
+				</div>
+			</div>
 	  </div>
 	</div>
