--- a/assets/css/2-modules/signup.sass
+++ b/assets/css/2-modules/signup.sass
@@ -3,17 +3,17 @@
   padding: 15px 75px
   overflow: auto
   width: 100%
-  
+
   +media($mobile)
     padding: 0
-  
+
   +media($screen)
     padding: 15px 0
-  
+
 .signup-container
   +media($screen)
     +outer-container(90%)
-  
+
 #signup-text
   font-size: 22px
   float: left
@@ -24,33 +24,44 @@
     width: 100%
     padding-bottom: 15px
     text-align: center
-    
+
 #signup-form
   float: right
   font-size: 16px
-  
+
   button
     color: $donate-red
     border: 2px solid $donate-red
     background-color: #fff
     transition: background-color .15s, color .15s
-    
+
     &:hover
       background-color: $donate-red
       color: #fff
-    
+
   +media($tablet)
     float: none
-  
+
 .signup-input
   float: left
   padding-left: 20px
-  
+
+  input[type=submit]
+    color: $donate-red
+    border: 2px solid $donate-red
+    background-color: #fff
+    transition: background-color .15s, color .15s
+
+    &:hover
+      background-color: $donate-red
+      color: #fff
+
+
   +media($tablet)
     width: 100%
     padding: 0 20px 15px
     text-align: center
-  
+
   input
     height: 35px
     width: 100%
