Updated special event for new event (july 24th 2016)

--- a/assets/css/3-layouts/special.sass
+++ b/assets/css/3-layouts/special.sass
@@ -11,8 +11,8 @@
       text-decoration: underline
 
 .special-hero
-  +background(url(/assets/img/c-sanders.jpg))
-  background-position: top
+  +background-image(linear-gradient(rgba($secondary-blue, 0.65), rgba($secondary-blue, 0.65)), url(/assets/img/clearcreek.jpg))
+  background-position: 0 25%
   background-repeat: no-repeat
   background-size: cover
   padding-bottom: 3em
